[tool.poetry]
name = "utility-container-suno-bark"
version = "0.4.0"
description = ""
authors = ["name <email@example.com>"]

[tool.poetry.dependencies]
requests = "*"
python = ">=3.11,<3.12"
scipy = "*"
suno-bark = { git = "https://github.com/suno-ai/bark.git" }
nltk = "*"
tqdm = { version = "*", allow-prereleases = true }
numpy = { version = "*", allow-prereleases = true }
torch = {version = "*", allow-prereleases = true}
torchvision = {version = "*", allow-prereleases = true}
typer = "^0.9.0"
torchaudio = "^2.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.1.5"
types-tqdm = "^4.66.0.4"
types-requests = "^2.31.0.10"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict=true

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "bark.*",
    "scipy.io.wavfile.*",
]
ignore_missing_imports = true

[tool.ruff]
select = ["R", "A", "B", "S", "F"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]
